# BasiC-Pitch

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  profiling.txt
data/output/: Undertale-Megalovania.mid  Undertale-Megalovania_basic_pitch.mid
experiment/: time_mem.sh
log/: profiling.txt  profiling_im2col.txt  profiling_naiveConv.txt  profiling_naiveConvOMP.txt
model/: cnn_contour_model.json  kernel.npy  lowpass_filter.npy
python/: midi_utils.py  run.py
src/: CQT.cpp  CQT.h  amtModel.cpp  amtModel.h  bind.cpp  cnn.cpp  cnn.h  constant.h  layer.cpp  layer.h  loader.cpp  loader.h  main.cpp  nnUtils.cpp  nnUtils.h  note.cpp  note.h  typedef.h  utils.cpp  utils.h
tests/: test_amtModel.py  test_cnn.py  test_cqt.py  test_layer.py  test_loader.py  test_nnUtils.py  test_note.py  test_utils.py  vis_audio.py
